# total_project_legacy_versions

./: .gitignore
3344/v9t10/v10A2/: audit_ffi  audit_flash_attention  audit_internals  audit_memory_pool  audit_modern_llm  audit_nan_injection  audit_pytorch_parity.py  audit_threadpool_parity  audit_trained_reality.py  build_pure_onnx.py  fuzz_lancius  generate_text  makefile  parity_runner  pytorch_lenet.onnx.data  readme_new.md  run_edge  run_llm  run_trained_batch  stress_test  test_diamond_memory  test_ffi_error  test_grad_check  test_model.lancius  test_path_bg  test_torture  train_1_epoch.py  train_cifar10  trained_lenet.lancius  trained_lenet.onnx.data
3344/v9t10/v10A2/examples/: audit_ffi.c  audit_memory_pool.c  audit_modern_llm.c  audit_nan_injection.c  parity_runner.c  run_edge.c  test_diamond_memory.c  test_grad_check.c  test_path_bg.c  test_torture.c  train_mnist.c
3344/v9t10/v10A2/include/: lancius.h
3344/v9t10/v10A2/include/lancius/: lancius.h  lancius_arena.h  lancius_autodiff.h  lancius_bytecode.h  lancius_ir.h  lancius_kernels.h  lancius_memory_planner.h  lancius_scheduler.h  lancius_stable_api.h  lancius_threadpool.h  lancius_vision_ops.h
3344/v9t10/v10A2/src/compiler/: lancius_bytecode.c  lancius_optimizer.c
3344/v9t10/v10A2/src/core/: lancius_arena.c  lancius_serialize.c  lancius_stable_api.c
3344/v9t10/v10A3/: CHANGELOG.md  CMakeLists.txt  MANIFEST.md  cifar10_lenet.gguf  cifar_result.txt  export_pytorch_onnx.py  lancius_bridge.py  makefile  manage_datasets.py  onnx_to_lancius.py  patch_onnx_binary.py  pytorch_lenet.lancius  pytorch_lenet.onnx  trained_lenet.onnx
3344/v9t10/v10A3/examples/: audit_ffi.c  audit_flash_attention.c  audit_internals.c  audit_threadpool_parity.c  fuzz_lancius.c  generate_text.c  run_edge.c  run_llm.c  run_trained_batch.c  soak_fuzz.c  stress_test.c  test_ffi_error.c  train_cifar10.c
3344/v9t10/v10A3/include/: lancius.h
3344/v9t10/v10A3/include/lancius/: lancius.h  lancius_arena.h  lancius_autodiff.h  lancius_bytecode.h  lancius_inference.h  lancius_ir.h  lancius_kernels.h  lancius_memory_planner.h  lancius_scheduler.h  lancius_stable_api.h  lancius_threadpool.h  lancius_vision_ops.h
3344/v9t10/v10A3/src/compiler/: lancius_quantize.c
3344/v9t10/v10A3/src/core/: lancius_arena.c  lancius_serialize.c
3344/v9t10/v10A3/src/ir/: lancius_ir.c
3344/v9t10/v10A3/src/math/: lancius_autodiff.c
3344/v9t10/v10A3/src/runtime/: lancius_scheduler.c
3432/v10-11/v10A1/: CMakeLists.txt  README.md  ai_context_pack.md  bench_graphics  bench_scientific  compat.h  test_core
3432/v10-11/v10A1/benchmarks/: bench.c
3432/v10-11/v10A1/include/mathlib/: combinatorics.h  error_free.h  exponential.h  fft.h  fixed_point.h  ieee754.h  integral.h  linalg_v10.h  minimax.h  ml_complex.h  numerical.h  payne_hanek.h  profiles.h  quadratics.h  quaternion.h  simd.h  simd_bare_metal.h  simd_batch.h  statistics.h  tensor.h  trigonometry.h
3432/v10-11/v10A1/legacy/: fft_stream.h
3432/v10-11/v10A1/src/: mathlib.c
3432/v10-11/v10A1/tests/: fuzz_boundary_gauntlet.c  fuzz_god_mode.c  test.c  test.h  test_core.c  test_harness.h  test_linalg.c  test_trig.c
3432/v10-11/v11A2/: CMakeLists.txt  README.md  compat.h  test_dsp  test_linalg  test_trig
3432/v10-11/v11A2/docs/: DESIGN_CONTRACT.md
3432/v10-11/v11A2/examples/: hello_tensor.c
3432/v10-11/v11A2/include/mathlib/: bitwise_fp.h  cpu_dispatch.h  fft.h  integral.h  ml_exp_log.h  ml_tensor.h  ode.h  optimization.h  polynomial.h  quaternion.h  simd.h  simd_batch.h  statistics.h
3432/v10-11/v11A2/include/mathlib/internal/: cordic.h  minimax.h
3432/v10-11/v11A2/legacy_DISABLED/: trigonometry.h
3432/v10-11/v11A2/tests/: fuzz_god_mode.c  test_harness.h  test_trig.c
3432/v10-11/v11A2/tests/regression/: README.md
3432/v10-11/v11A2/validation/: ulp_error.c
3432/v10-11/v11A3/: .gitignore  README.md  soak_test.sh  test_core  test_dsp  test_linalg  test_trig
3432/v10-11/v11A3/benchmarks/: bench.c
3432/v10-11/v11A3/docs/: API_STATUS.md
3432/v10-11/v11A3/legacy/: exponential.h
3432/v10-11/v11A3/scripts/: compute_minimax.py
3432/v10-11/v11A3/src/: cpu_dispatch.c  mathlib.c
3432/v10-11/v11A3/tests/: fuzz_boundary_gauntlet.c  run_fuzz_vault.py  run_soak.sh  run_tests.py  test.c  test_dsp.c  test_linalg.c
3432/v10-11/v11A3/validation/: fma_audit.c  fma_audit.s
475/legacy/v14A1/: evolution.txt  how_to_use.md  readme.md
475/legacy/v14A1/src/: engine  makefile
475/legacy/v14A3-1/: makefile  mpe_engine.h  root_gtk.c  simulation.c
475/legacy/v14A3-1/core/: buffer.h  frame_timer.h  math4_special.h
475/legacy/v14A3-1/physics/: broadphase.c  broadphase.h  collision_mechanics.c  collision_mechanics.h  constraint_interface.h  define_forces.c  define_forces.h  physics_world.c  physics_world.h  spring_joint.h
475/legacy/v14A3-1/render/: cube_meshing.c  cube_meshing.h  grid.h  new_render.c  shader_loading.c  shader_loading.h  sphere_meshing.h  wireframe.c  wireframe.h
475/legacy/v14A3-1/scene/: boundary.h  scene_init.h  scene_load.h  scene_saving.h
475/legacy/v14A3-1/stage1/: master_header.h
475/legacy/v14A3-1/stage2/: master_header_2.h
475/legacy/v14A3-1/stage4/: master_header_4.h
475/legacy/v14A3-1/ui_input/: camera.c  camera.h  gui.c  input_control.c  mouse_lock.c  object_selector.h  object_spawner.h  overlay.h
475/legacy/v14A3-2/stage1/: root_gtk.c
475/legacy/v14A3-2/stage3/: master_header_3.h
475/legacy/v14A3-2/stage5/: master_header_5.h
623/: README.txt
623/obsolete/2526/: README.txt
623/obsolete/2526/stage3/: 13_3A.java
623/stable/: RobotConstants.java  S10_SensorHopper.java  S11_PIDLinearSlide.java  S12_IntegratedMechanism.java  S4_SimpleAuto.java  S5_RoadRunnerAutoExample.java  S6_ParallelAuto.java  S6_PollenHopper.java  S7_StateMachineHopper.java  S8_AprilTagAuto.java  S8_AprilTagVision.java  S9_CompleteAutonomous.java  s1_mechanum_drive_shell.java  s1_omnidrive_shell.java  s1_tank_drive_shell.java  s2_hang_branch_endgame.java  s2_pollen_hopper.java  s2_pollenated_branches.java  s3_dashboard.java  s3_test_dashboard.java  upload.txt
(+82 files in other folders)
